fix layout issues (for homepage)

--- a/src/index.css
+++ b/src/index.css
@@ -136,3 +136,8 @@ main {
   height: 0.25rem;
   background: var(--color-primary);
 }
+
+.wrapper {
+  margin: 0 auto;
+  padding: 0;
+}
